[package]
name = "secunit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
kile = { git = "https://github.com/sk3w/winproto.git", rev = "6ec1cbf", version = "0.1.0" }
ndisapi = "0.5.2"
pretty-hex = "0.3.0"
smoltcp = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
win_etw_macros = "0.1.8"
win_etw_provider = "0.1.8"
windows = "0.51.1"
